--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "devDependencies": {
     "@serverless-stack/cli": "^1.2.13",
     "@serverless-stack/resources": "^1.2.13",
-    "typescript": "^4.7.2",
     "@tsconfig/node16": "^1.0.2",
+    "typescript": "^4.7.2",
     "vitest": "^0.13.0"
   },
   "workspaces": [
     "backend"
-  ]
+  ],
+  "dependencies": {
+    "aws-sdk": "^2.1146.0",
+    "uuid": "^8.3.2"
+  }
 }
